refactor: updated filter tests (REFACT-56)